--- a/Home.html
+++ b/Home.html
@@ -1430,8 +1430,8 @@ This website and its connected services are provided “as is” and “as avail
         </div>
 
         <div style="">    
-            <a href="https://www.linkedin.com/in/josecmalves/"> <img style="max-width: 90%; margin-bottom: 7px"src="img/rafa.png">
-            <p  style="text-align: center; margin: 0 auto"><p>Rafael Alves<p>Marketing e Web Developer</p></a>
+            <a href="https://www.instagram.com/rapha.alvesf/"> <img style="max-width: 90%; margin-bottom: 7px"src="img/rafa.png">
+            <p  style="text-align: center; margin: 0 auto">Marketing e Web Developer</p></a>
          </div>
     </div>
 </footer>
