--- a/Home.html
+++ b/Home.html
@@ -1315,8 +1315,8 @@ nav{
     Collection will be minted for 1.2 Sol (Pre-sale) and 1.4 Sol (General sale).<br><br>
     <b>Why 8888 NFTs?</b><br>
     Octopus have 8 arms.<br><br>
-    <b>How many trades do we have?</b><br>
-    One hundred and twelve total.<br><br>
+    <b>How many traits do we have?</b><br>
+    One hundred and twelve total (112).<br><br>
     <b>What are the utilities of this NFT if bought?</b><br>
     The money gathered from the sold NFTs will be used to Develop a Battle Royale with a NFT Marketplace. Any holders will have access to the game in Alpha and Beta state. The NFTs will also be a Entry Card for the Beach Club (real life club), grant access to VIP Merch and NFT/SOL Giveaways. You will too unlock secret and unique objects in our future game. 
 </p>    
