--- a/Home.html
+++ b/Home.html
@@ -23,7 +23,11 @@
     
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="A Collection of 8,888 Cracked Octopus NFT's. 
+	       An Upcoming Crypto Battle Royale/NFT Marketplace.
+	       What's our Goal? Create a game that makes you, the player,
+	       active and passive income with our Crypto Game. 
+	       We have so many ideas! By Rafael & José Alves"
     />
     <link rel="apple-touch-icon" href="/logo192.png" />
     <!--
