--- a/Home.html
+++ b/Home.html
@@ -23,7 +23,7 @@
     
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Cracked Octopus Club is a collection of 8,888 Octopus NFT's. The COC Team wants to use the money gathered from the Sales, to develop a Crypto Battle Royale with a NFT Marketplace."
     />
     <link rel="apple-touch-icon" href="/logo192.png" />
     <!--
