--- a/Home.html
+++ b/Home.html
@@ -23,7 +23,7 @@
     
     <meta
       name="description"
-      content="Cracked Octopus Club is a collection of 8,888 Octopus NFT's. Upcoming development of a Crypto Battle Royale with a NFT Marketplace."
+      content="Cracked Octopus Club is a collection of 8,888 Octopus NFT's. Upcoming development of a Crypto Battle Royale with a NFT Marketplace. By Rafal and José Alves"
     />
     <link rel="apple-touch-icon" href="/logo192.png" />
     <!--
