--- a/Home.html
+++ b/Home.html
@@ -22,7 +22,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     
     <meta
-      name="description"
+      name="Cracked Octopus"
       content="Cracked Octopus Club is a collection of 8,888 Octopus NFT's. Upcoming development of a Crypto Battle Royale with a NFT Marketplace. By Rafal and José Alves"
     />
     <link rel="apple-touch-icon" href="/logo192.png" />
@@ -1317,9 +1317,9 @@ nav{
 <h2 class="texto">FAQ <i>(Frequently Asked Questions)</i></h2>
 <p class="texto animatable fadeInUp">
     <b>When is the Mint going to happen and where?</b><br>
-    February 2022 at our Website.<br><br>
+    12 of February 2022 (WL) & 5 of March (General Mint) at our Website.<br><br>
     <b>What is the Blockchain and for how much will it be sold?</b><br>
-    Collection will be minted for 1.2 Sol (Pre-sale) and 1.4 Sol (General sale).<br><br>
+    Collection will be minted for 1.2 Sol (Pre-sale) and 1.4 Sol (General sale).(Sol Price can be changed on mint day)<br><br>
     <b>Why 8888 NFT's?</b><br>
     Octopus have 8 arms.<br><br>
     <b>How many traits do we have?</b><br>
