--- a/Home.html
+++ b/Home.html
@@ -1319,7 +1319,7 @@ nav{
     <b>When is the Mint going to happen and where?</b><br>
     12 of February 2022 (WL) & 5 of March (General Mint) at our Website.<br><br>
     <b>What is the Blockchain and for how much will it be sold?</b><br>
-    Collection will be minted for 1.2 Sol (Pre-sale) and 1.4 Sol (General sale). (We reserve the rigths to ajust the SOL Price on minting day)<br><br>
+    Collection will be minted for 1.2 Solana (Pre-sale - WL) and 1.4 Solana (General sale). (We reserve the rigths to ajust the SOL Price on minting day)<br><br>
     <b>What's the price in Euros?</b><br>
     ~150€ - WL and ~190€ - General Mint (Final Price)<br><br>
     <b>Why 8888 NFT's?</b><br>
