--- a/Home.html
+++ b/Home.html
@@ -1322,6 +1322,8 @@ nav{
     Collection will be minted for 1.2 Solana (Pre-sale - WL) and 1.4 Solana (General sale). (We reserve the rigths to adjust the SOL Price on minting day)<br><br>
     <b>What's the price in Euros?</b><br>
     ~150€ - WL and ~190€ - General Mint (Final Price)<br><br>
+    <b>How can I join the WL?</b><br>
+    Simple, join our Discord and ask the Moderators<br><br>
     <b>Why 8888 NFT's?</b><br>
     Octopus have 8 arms.<br><br>
     <b>How many traits do we have?</b><br>
