--- a/Home.html
+++ b/Home.html
@@ -1317,7 +1317,7 @@ nav{
 <h2 class="texto">FAQ <i>(Frequently Asked Questions)</i></h2>
 <p class="texto animatable fadeInUp">
     <b>When is the Mint going to happen and where?</b><br>
-    12 of February 2022 (WL) & 5 of March (General Mint) at our Website.<br><br>
+    12 of February 2022, 12:00 GMT (WL) & 5 of March, Time TBD(General Mint) at our Website.<br><br>
     <b>What is the Blockchain and for how much will it be sold?</b><br>
     Collection will be minted for 1.2 Solana (Pre-sale - WL) and 1.4 Solana (General sale), (We reserve the rigths to adjust the SOL Price on minting day).<br><br>
     <b>What's the price in Euros?</b><br>
