--- a/Home.html
+++ b/Home.html
@@ -1330,7 +1330,11 @@ nav{
     One hundred and twelve total (112). <br><br>
     <b>What are the utilities of this NFT if bought?</b><br>
     The money gathered from the sold NFT's will be used to Develop a Battle Royale with a NFT Marketplace. Any holders will have access to the game in Alpha and Beta state. The NFT's will also be a Entry Card for the Beach Club (real life club), grant access to VIP Merch and NFT/SOL Giveaways. You will too unlock Legendary and unique objects in our future game. Active income will take play by playing the game and leveling up the card. Passive income will happen when hodling Rare NFT's and selling through our Marketplace.    
-</p>    
+</p>
+
+<div style="padding-top: 50px;" class="final">
+<br>
+<h2>Terms &amp; Conditions</h2>
 <br><br><br>
 <div style="padding-top: 0px; padding-bottom: 0px; max-width: 1200px; margin: 0 auto;">
         <div style="position: relative; max-width: 1200px; margin: 0 auto">
