--- a/Home.html
+++ b/Home.html
@@ -1289,7 +1289,7 @@ nav{
                 <p class="texto texto-leg"><b class="cap">20%</b> - One Lucky Octa Holder<br>gets a 5 SOL airdrop.</p>
             </div>
             <div class="block-left animatable fadeInUp txt-geral"  id="texto-03">
-                <p class="texto texto-leg"><b class="cap">40% </b>- We release the Closed Octas.<br>5 Octas (tokens held back from the sale)<br>are airdropped to random Octaholders.</p>
+                <p class="texto texto-leg"><b class="cap">40% </b>- We release the Closed Octas.<br>5 Octas<br>(tokens held back from the sale)<br>are airdropped to random<br>Octa holders.</p>
             </div>
             <div class="block-rigth animatable fadeInUp txt-geral" id="texto-04">
                 <p class="texto texto-leg"><b class="cap">60%</b> - Members-Exclusive COC<br>Merch Store gets unlocked,<br>featuring Limited Edition tees,<br> hoodies, and other goodies.</p>
