--- a/Home.html
+++ b/Home.html
@@ -1289,7 +1289,7 @@ nav{
                 <p class="texto texto-leg"><b class="cap">20%</b> - One Lucky Octa Holder<br>gets a 5 SOL airdrop.</p>
             </div>
             <div class="block-left animatable fadeInUp txt-geral"  id="texto-03">
-                <p class="texto texto-leg"><b class="cap">40% </b>- We release the Closed Octas.<br>5 Octas<br>(tokens held back from the sale)<br>are airdropped to random<br>Octa holders.</p>
+                <p class="texto texto-leg"><b class="cap">40% </b>- We release the Closed Octas.<br>5 Octas (tokens held back<br>from the sale)<br>are airdropped to random<br>Octa holders.</p>
             </div>
             <div class="block-rigth animatable fadeInUp txt-geral" id="texto-04">
                 <p class="texto texto-leg"><b class="cap">60%</b> - Members-Exclusive COC<br>Merch Store gets unlocked,<br>featuring Limited Edition tees,<br> hoodies, and other goodies.</p>
@@ -1334,7 +1334,7 @@ nav{
 
 <div style="padding-top: 50px;" class="final">
 <br>
-<h2>Click &amp; Here</h2>
+<h2>Click the images</h2>
 <br><br><br>
 <div style="padding-top: 0px; padding-bottom: 0px; max-width: 1200px; margin: 0 auto;">
         <div style="position: relative; max-width: 1200px; margin: 0 auto">
