--- a/Home.html
+++ b/Home.html
@@ -1334,7 +1334,7 @@ nav{
 
 <div style="padding-top: 50px;" class="final">
 <br>
-<h2>Click the images</h2>
+<h2>Click Us</h2>
 <br><br><br>
 <div style="padding-top: 0px; padding-bottom: 0px; max-width: 1200px; margin: 0 auto;">
         <div style="position: relative; max-width: 1200px; margin: 0 auto">
