--- a/Home.html
+++ b/Home.html
@@ -1315,7 +1315,7 @@ nav{
 <br id="FAQ"><br>
 
 <h2 class="texto">FAQ <i>(Frequently Asked Questions)</i></h2>
-<p class="texto animatable">
+<p class="texto animatable fadeInUp">
     <b>When is the Mint going to happen and where?</b><br>
     12 of February 2022, 12:00 GMT (WL) & 5 of March, Time TBD (General Mint) at our Website.<br><br>
     <b>What is the Blockchain and for how much will it be sold?</b><br>
