--- a/Home.html
+++ b/Home.html
@@ -995,7 +995,7 @@ nav{
 <div class="container">
     <div>
     <p class="data" style="font-size: 25px;line-height: 25px;">Coming</p>
-    <p class="data">February 12</p><br>
+    <p class="data">February 20</p><br>
 </div>
   <div class="row">
     
@@ -1315,13 +1315,13 @@ nav{
      <b>When is the Mint going to happen and where?</b><br>
 </p>
 <p class="texto animatable fadeInUp">
-    12 of February 2022, 12:00 GMT (WL) & 5 of March, Time TBD (General Mint) at our Website.<br><br>
+    20 of February 2022, 12:00 GMT (Presale) & 28 of February, Time TBD (General Mint) at our Website.<br><br>
 </p>
 <p class="texto animatable fadeInUp">
     <b>What is the Blockchain and for how much will it be sold?</b><br>
 </p>
 <p class="texto animatable fadeInUp">
-    Collection will be minted for 1.2 Solana (Pre-sale - WL) and 1.4 Solana (General sale), (We reserve the rigths to adjust the SOL Price on minting day).<br><br>
+    Collection will be minted for 1.5 Solana (Pre-sale - WL) and 1.9 Solana (General sale), (We reserve the rigths to adjust the SOL Price on minting day).<br><br>
 </p>
 <p class="texto animatable fadeInUp">
     <b>What's the price in Euros?</b><br>
