--- a/Home.html
+++ b/Home.html
@@ -35,7 +35,6 @@
       Notice the use of  in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
-
       Unlike "/favicon.ico" or "favicon.ico", "/favicon.ico" will
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
@@ -833,6 +832,7 @@ section {max-width: 100%;}
 .content{
     width:100%;
 }
+    .redes{    top: 200px;}
 .flickity-slider {
     position: absolute;
     width: 100%;
