--- a/Home.html
+++ b/Home.html
@@ -995,8 +995,8 @@ nav{
 <br>   
 <div class="container">
     <div>
-        <p class="data" style="font-size: 25px;line-height: 25px;">Coming</p>
-        <p class="data">February 20</p><br>
+        <p class="data" style="font-size: 25px;line-height: 25px;">Minting</p>
+        <p class="data">Live</p><br>
     </div>
     <div class="row">
         <div class="col col-xs-6 col-sm-4 col-md-3 p-2">
