--- a/Home.html
+++ b/Home.html
@@ -1323,13 +1323,13 @@ nav{
     <b>What is the Blockchain and for how much will it be sold?</b><br>
 </p>
 <p class="texto animatable fadeInUp">
-    Collection will be minted for 1.5 Solana (Pre-sale - WL) and 1.9 Solana (General sale), (We reserve the rigths to adjust the SOL Price on minting day).<br><br>
+    Collection will be minted for 1.8 Solana (Pre-sale - WL) and 2.1 Solana (General sale), (We reserve the rigths to adjust the SOL Price on minting day).<br><br>
 </p>
 <p class="texto animatable fadeInUp">
     <b>What's the price in Euros?</b><br>
 </p>
 <p class="texto animatable fadeInUp">
-    ~150€ - WL and ~190€ - General Mint (Final Price).<br><br>
+    ~220€ - WL and ~250€ - General Mint (Prices May Fluctuate).<br><br>
 </p>
 <p class="texto animatable fadeInUp">
     <b>How can I join the WL?</b><br>
