--- a/Home.html
+++ b/Home.html
@@ -1477,7 +1477,8 @@ nav{
 <div style="text-align: center; margin: 0 auto;max-width: 200px">
     <div style="">    
         <a href="https://nftcalendar.io/event/cracked-octopus-club/"> <img style="max-width: 90%;margin-bottom: 7px" src="http://www.crackedoctopusclub.com/img/nft-calendar-transparent.png"></a>
-    </div>
+        <a href="https://nftcalendar.io/event/cracked-octopus-club-1/"> <img style="max-width: 90%;margin-bottom: 7px" src="http://www.crackedoctopusclub.com/img/nft-calendar-transparent.png"></a>
+</div>
 </div>
     
 </div>
