--- a/Home.html
+++ b/Home.html
@@ -1125,7 +1125,7 @@ nav{
 </div>
 <br><br>
 <h2 class="texto">Why do we exist?</h2>
-<p class="texto texto-1">Cracked Octopus Club is a collection of 8,888 Octopus NFT's. The COC Team wants to use the money gathered from the Sales, to develop a Crypto Battle Royale with a NFT Marketplace. The goal is to create a game that makes you, the player, active and passive income with our Crypto Game. You are not a gamer? It's fine, passive income is here for that reason. We hope to have you onboard for our Adventure. Ideas are flying of the shelves! You can tell us yours! By Rafael &amp; Joseph Alves</p>
+<p class="texto texto-1">Cracked Octopus Club is a collection of 8,888 Octopus NFT's. The COC Team wants to use the money gathered from the Sales, to develop a Crypto Battle Royale with a NFT Marketplace. The goal is to create a game that offers you, the player, an opportunity to invest in yourself. You will be able to sell your own bought skins that you leveled up. We want an active marketplace! You wont lock your money into skins ever again. You are not a gamer? It's fine, passive income is here for that reason. We hope to have you onboard for our Adventure. Ideas are flying of the shelves! You can tell us yours! By Rafael &amp; Joseph Alves</p>
   
 <br><br>  
 <iframe style="margin: 0 auto; text-align: center;display: block" src="https://discord.com/widget?id=759742588902309908&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
