--- a/Home.html
+++ b/Home.html
@@ -1000,7 +1000,7 @@ nav{
     </div>
     <div class="row">
         <div class="col col-xs-6 col-sm-4 col-md-3 p-2">
-          <a href="https://www.twitter.com/CrackedOctoClub" class="btn btn-social btn-twitter"><i class="fa fa-fw fa-twitter"></i> Twitter</a>
+          <a href="https://www.twitter.com/CrackedOctopusC" class="btn btn-social btn-twitter"><i class="fa fa-fw fa-twitter"></i> Twitter</a>
         </div>
 
         <div class="col col-xs-6 col-sm-4 col-md-3 p-2">
